--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
 
-  <main>
-    
+  <h1>Dinosaurs</h1>
+
+  <ul class="list-group">
+    <li class="list-group-item">
+      <a href="#">Ankylosaurus</a>
+    </li>
+    <li class="list-group-item">
+      <a href="#">Hadrosaur</a>
+    </li>
+  </ul>
