--- a/index.html
+++ b/index.html
@@ -12,10 +12,31 @@
   <h1>Dinosaurs</h1>
 
   <ul class="list-group">
-    <li class="list-group-item">
-      <a href="#">Ankylosaurus</a>
+    <li>
+      <i class="icon i-64 i-ankylosaurus">
+        <img src="images/icon.svg" alt="">
+      </i>
+        <span class="icon-label">Ankylosaurus</span>
     </li>
-    <li class="list-group-item">
-      <a href="#">Hadrosaur</a>
+    <li>
+      <i class="icon i-64 i-hadrosaur">
+        <img src="images/icon.svg" alt="">
+      </i>
+        <span class="icon-label">Hadrosaur</span>
+    </li>
+    <li>
+      <i class="icon i-64 i-stegosaurus">
+        <img src="images/icon.svg" alt="">
+      </i>
+        <span class="icon-label">Stegosaurus</span>
+    </li>
+    <li>
+      <i class="icon i-64 i-triceratops">
+        <img src="images/icon.svg" alt="">
+      </i>
+        <span class="icon-label">Triceratops</span>
     </li>
   </ul>
+
+</body>
+</html>
