--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
   <ul class="list-group">
     <li>
       <i class="icon i-64 i-ankylosaurus">
-        <img src="images/icon.svg" alt="">
+        <img src="images/ankylosaurus.svg" alt="">
       </i>
         <span class="icon-label">Ankylosaurus</span>
     </li>
     <li>
       <i class="icon i-64 i-hadrosaur">
-        <img src="images/icon.svg" alt="">
+        <img src="images/hadrosaur.svg" alt="">
       </i>
         <span class="icon-label">Hadrosaur</span>
     </li>
     <li>
       <i class="icon i-64 i-stegosaurus">
-        <img src="images/icon.svg" alt="">
+        <img src="images/stegosaurus.svg" alt="">
       </i>
         <span class="icon-label">Stegosaurus</span>
     </li>
     <li>
       <i class="icon i-64 i-triceratops">
-        <img src="images/icon.svg" alt="">
+        <img src="images/triceratops.svg" alt="">
       </i>
         <span class="icon-label">Triceratops</span>
     </li>
