--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 
   <h1>Dinosaurs</h1>
 
-  <ul class="list-group">
+  <ol class="list-group">
     <li>
       <i class="icon i-64 i-ankylosaurus">
         <img src="images/ankylosaurus.svg" alt="">
       </i>
-        <span class="icon-label">Ankylosaurus</span>
+      <span class="icon-label">Ankylosaurus</span>
     </li>
     <li>
       <i class="icon i-64 i-hadrosaur">
         <img src="images/hadrosaur.svg" alt="">
       </i>
-        <span class="icon-label">Hadrosaur</span>
+      <span class="icon-label">Hadrosaur</span>
     </li>
     <li>
       <i class="icon i-64 i-stegosaurus">
         <img src="images/stegosaurus.svg" alt="">
       </i>
-        <span class="icon-label">Stegosaurus</span>
+      <span class="icon-label">Stegosaurus</span>
     </li>
     <li>
       <i class="icon i-64 i-triceratops">
         <img src="images/triceratops.svg" alt="">
       </i>
-        <span class="icon-label">Triceratops</span>
+      <span class="icon-label">Triceratops</span>
     </li>
-  </ul>
+  </ol>
 
 </body>
 </html>
